# articubot_one

./: CMakeLists.txt  frames_2024-03-03_15.44.56.gv  package.xml
bringup/config/: diffbot_controllers.yaml
bringup/launch/: diffbot.launch.py
config/: joystick.yaml  joystick_params.yaml
description/: OLDrobot_core.xacro  WORKINGarrow_test.urdf  WORKINGmybox.urdf  WORKINGrobot_core.xacro  arrow_test.urdf  camera.xacro  gazebo_control.xacro  lidar.xacro  mybox.urdf  mytest1  robot.urdf.xacro  robot_core copy.xacro  robot_core.xacro  ros2_control copy.xacro  ros2_control.xacro  ros2_control_new.xacro  simple.urdf  two_link.urdf
description/old/: WORKINGtwo_link.urdf  mytest1.urdf  two_link.urdf
description/ros2_control/: diffbot.ros2_control.xacro
description/urdf/: diffbot.urdf.xacro  diffbot_description.urdf.xacro
hardware/: diffbot_system.cpp
hardware/include/ros2_control_demo_example_2/: SerialCommunication.hpp  diffbot_system.hpp  wheel.hpp
launch/: bk_launch_robot.launch copy.py  bk_launch_sim.launch.py  camera.launch.py  joystick.launch.py  launch_robot.launch.py  launch_sim.launch.py  rplidar2.launch.py  rsp.launch.py  teleop_joy.launch.py
meshes/: arrow_link.STL  base_d.dae  base_link.STL  base_link_2.STL  l1.STL  l2.STL  l3.STL  l4.STL  l5.STL  l6.STL
src/: bk_joy_to_twist_stamped.cpp  bk_twist_to_twist_stamped_converter.cpp  joy_listener.cpp  joy_to_twist_stamped.cpp  twist_to_twist_stamped_converter.cpp
worlds/: obstacle_course.world
